# zX12

./: .gitignore  LICENSE  README.md  build.sh  build.zig  build.zig.zon  pyproject.toml  setup.py
docs/: C_API.md  C_API_SUMMARY.md
example/python/: main.py
example/zig/: README.md  build.zig  main.zig  setup.sh
examples/c/: example.c
examples/python/: example.py  zx12_example.py
include/: zx12.h
python/zx12/: __init__.py  zx12.py
samples/: 837i_example.x12  837p_example.x12  837p_example_2.x12  readme_sample.x12  simple_test.x12
schema/: 837i.json  837p.json  SCHEMA.md
src/: claim837.zig  main.zig  parser.zig  schema_parser.zig  test_schema_parser.zig  utils.zig
src/x12_parser/: HL_TREE_README.md  IMPLEMENTATION_SUMMARY.md  JSON_BUILDER_README.md  README.md  SCHEMA_README.md  document_processor.zig  hl_tree.zig  json_builder.zig  schema.zig  test_hl_tree.zig  test_real_file.zig  x12_parser.zig
