
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zx12"
version = "0.1.0"
license = "MIT"
authors = [
  { name="Bedrock Billing", email="support@bedrockbilling.com" },
  { name="Bedrock Billing", email="support@bedrockbilling.com"}
]
description = "A Python wrapper for the zX12 library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "psutil>=7.1.1",
    "setuptools>=68.0.0",
]

[project.urls]
"Homepage" = "https://github.com/LibrePPS/zX12"
"Bug Tracker" = "https://github.com/LibrePPS/zX12/issues"
